# openagentflow

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.claude/commands/: openagentflow.md
docs/: agents.md  claude-code-skill.md  configuration.md  distributed.md  getting-started.md  graph.md  memory.md  meta-agent.md  reasoning-engines-neuroscience.md  reasoning.md  tools.md
docs/design/: reasoning-engines-physics.md
examples/: 01_tools.py  02_agent.py  03_chain.py  04_swarm.py  05_reasoning.py  06_memory.py  07_graph.py  08_meta_agent.py  09_distributed.py  10_full_pipeline.py  11_code_review_swarm.py  12_ollama_local.py  README.md  api_key_demo.py  basic_agent.py  demo.py  multi_agent_demo.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentFlowEditor.tsx  CommandPalette.tsx  Layout.tsx  ReasoningPanel.tsx  StatusBar.tsx  TraceDAG.tsx
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Memory.tsx  ReasoningEngines.tsx  Settings.tsx  Tools.tsx  Traces.tsx
src/openagentflow/: __init__.py  exceptions.py
src/openagentflow/agents/: __init__.py  code_quality.py  creative.py  documentation.py  meta.py  refactoring.py  research.py  security.py  testing.py
src/openagentflow/cli/: __init__.py  app.py
src/openagentflow/config/: __init__.py  settings.py
src/openagentflow/core/: __init__.py  agent.py  chain.py  swarm.py  tool.py  types.py
src/openagentflow/distributed/: __init__.py  base.py  docker.py  kubernetes.py  provider.py  ssh.py
src/openagentflow/graph/: __init__.py  base.py  gremlin.py  sqlite.py
src/openagentflow/llm/: __init__.py  base.py
src/openagentflow/memory/: README.md  __init__.py  base.py  fleeting.py  gc.py  long_term.py  short_term.py
src/openagentflow/meta/: __init__.py  sandbox.py  tool_factory.py
src/openagentflow/reasoning/: README.md  __init__.py  adversarial.py  annealing.py  attractor_network.py  barrier_penetration.py  basal_ganglia_gating.py  base.py  default_mode_network.py  dialectical.py  dreamwake.py  entangled_threads.py  entropic_funnel.py  evolutionary.py  fractal.py  gauge_invariance.py  global_workspace.py  hebbian_association.py  hippocampal_replay.py  lateral_inhibition.py  least_action_path.py  metacognitive.py  neural_oscillation.py  neuromodulatory_sweep.py  perturbative_expansion.py  phase_transition.py  predictive_coding.py  renormalization_group.py  resonance.py  socratic.py  superposition_collapse.py  temporal.py  wave_interference.py
src/openagentflow/runtime/: __init__.py  executor.py
src/openagentflow/server/: __init__.py  app.py  models.py  ws.py
src/openagentflow/tools/: __init__.py  ai.py  code.py  crypto.py  data.py  datetime_.py  math_.py  media.py  system.py  text.py  web.py
tests/: __init__.py  conftest.py  test_agent.py  test_chain.py  test_executor.py  test_graph_sqlite.py  test_llm.py  test_memory.py  test_meta_agent.py  test_ollama_provider.py  test_swarm.py  test_tool.py
(+13 files in other folders)
