[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagentflow"
version = "0.2.0"
description = "Open Agent Flow - A distributed agentic AI workflow framework with graph-native reasoning traces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Open Agent Flow Contributors" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "workflow",
    "orchestration",
    "graph",
    "lineage",
    "distributed",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "click>=8.1,<9.0",
    "rich>=13.7,<14.0",
    "aiohttp>=3.9,<4.0",
    "orjson>=3.9,<4.0",
    "anyio>=4.2,<5.0",
    "python-dateutil>=2.8,<3.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40,<1.0"]
openai = ["openai>=1.50,<2.0"]
bedrock = ["boto3>=1.34,<2.0"]
ollama = ["ollama>=0.3,<1.0"]
gremlin = ["gremlinpython>=3.7,<4.0"]
pgvector = ["asyncpg>=0.29,<1.0", "pgvector>=0.2,<1.0"]
redis = ["redis>=5.0,<6.0"]
server = [
    "fastapi>=0.109,<1.0",
    "uvicorn>=0.27,<1.0",
    "websockets>=12.0,<13.0",
    "python-multipart>=0.0.6,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<5.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.2,<1.0",
    "pre-commit>=3.6,<4.0",
]
all = [
    "openagentflow[anthropic,openai,bedrock,ollama,pgvector,redis,server]"
]

[project.scripts]
openagentflow = "openagentflow.cli:main"

[project.urls]
Homepage = "https://github.com/v10z/openagentflow"
Documentation = "https://github.com/v10z/openagentflow#readme"
Repository = "https://github.com/v10z/openagentflow"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openagentflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["openagentflow"]
